# obs-service-cargo

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  cargo_audit.service  cargo_vendor  cargo_vendor.service  cliff.toml  do_bulk_update.py  runtests.sh  rust-toolchain.toml  scan.cfg
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml
bulk-update/: Cargo.toml
bulk-updater/: Cargo.toml
bulk-updater/src/: cli.rs  lib.rs  main.rs  operations.rs  services.rs
cargo/: Cargo.toml
cargo/src/: audit.rs  cargo_commands.rs  cli.rs  consts.rs  errors.rs  lib.rs  registry.rs  services.rs  target.rs  toml_manifest.rs  vendor.rs
cargo/src/audit/: mod.rs
cargo/src/cli/: mod.rs
cargo/src/utils/: compress.rs  decompress.rs  mod.rs
cargo/tests/: behaviour.rs
src/: consts.rs
src/cli/: mod.rs
