[workspace]
members = [
  "cargo",
  "bulk-updater",
]

default-members = [
  "cargo",
  "bulk-updater",
]

resolver = "2"

[workspace.package]
version = "0.8.9"
description = "OBS Source Service and utilities for Rust software packaging."
authors = [
  "Soc Virnyl Estela <socvirnyl.estela@uncomfyhalomacro.pl>",
  "William Brown <william@blackhats.net.au>",
]
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
rustsec = "^0.28.2"
clap = "~4.4.0"
glob = "~0.3.1"
tracing = { version = "^0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }
quick-xml = "~0.30"
# Pin to the most recent version before or after 1.0.172
# https://github.com/serde-rs/serde/issues/2538 is a security risk.
serde = "~1.0.184"

[workspace.metadata.services]
assets = [ "./cargo_vendor.service", "./cargo_audit.service" ]

[profile.release]
lto = true          # Enable Link Time Optimization.
debug = true        # Include debug symbols. If you are going to complain for big binary sizes, there is a release-stripped option :P
codegen-units = 8   # Default. Little gains if set to 1 so why bother?
panic = 'abort'     # Abort on panic.
strip = false       # Strip symbols from binary.

[profile.release-stripped]
inherits = "release"
strip = true
