[workspace]
members = ["cargo"]
default-members = ["cargo"]
resolver = "2"

[workspace.package]
version = "6.0.1"
description = "OBS Source Service and utilities for Rust software packaging."
authors = [
        "Soc Virnyl Estela <socvirnyl.estela@uncomfyhalomacro.pl>",
        "William Brown <william@blackhats.net.au>",
]
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
rustsec = "0.30"
libroast = { version = "7.2.2", features = ["obs"] }
clap = "4.4"
glob = "0.3"
tracing = { version = "0.1", features = [
        "max_level_trace",
        "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quick-xml = "0.37"
# Pin to the most recent version before or after 1.0.172
# https://github.com/serde-rs/serde/issues/2538 is a security risk.
serde = "1.0"

[workspace.metadata.services]
assets = ["./cargo_vendor.service"]

[workspace.lints.rust]
warnings = "deny"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# Enable some groups of clippy lints.
suspicious = "deny"
perf = "deny"
# Specific lints to enforce.
todo = "warn"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
await_holding_lock = "deny"
needless_pass_by_value = "deny"
trivially_copy_pass_by_ref = "deny"
disallowed_types = "deny"
manual_let_else = "deny"
unreachable = "allow"
unit_arg = "allow"
lint_groups_priority = "allow"

[profile.release]
lto = true        # Enable Link Time Optimization.
debug = true      # Include debug symbols. If you are going to complain for big binary sizes, there is a release-stripped option :P
codegen-units = 8 # Default. Little gains if set to 1 so why bother?
panic = 'abort'   # Abort on panic.
strip = false     # Strip symbols from binary.

[profile.release-stripped]
inherits = "release"
strip = true
