[package]
name = "bulk-update"
description = "OBS Service Cargo Bulk Updater."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { workspace = true, features = ["overlapped-lists", "serialize"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true
tracing-subscriber.workspace = true
