[package]
name = "bulk-updater"
description = "OBS Service Cargo Bulk Updater."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { workspace = true, features = ["overlapped-lists", "serialize"] }
obs-service-cargo = { path = "../cargo", version = "0.8" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true
tracing-subscriber.workspace = true
terminfo = "0.8.0"
