[package]
name = "bulk-updater"
description = "OBS Service Cargo Bulk Updater."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { workspace = true, features = ["overlapped-lists", "serialize"] }
obs-service-cargo = { path = "../cargo" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "alloc"] }
libroast = { git = "https://github.com/openSUSE-Rust/roast", version = "^3" }
tracing.workspace = true
tracing-subscriber.workspace = true
terminfo = "^0.8.0"
rayon = "^1.8"

[lints]
workspace = true
