[package]
name = "obs-service-cargo"
description = "OBS Source Service to vendor and audit all crates.io and dependencies for Rust project locally. Executable rewritten in Rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustsec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true, features = ["derive"] }
glob.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

flate2 = { version = "1.0" }
infer = "0.15"
tar = "0.4"
tempfile = "3.8"
terminfo = "0.8"
toml = "0.7"
xz2 = "0.1"
zstd = { version = "0.12", features = ["pkg-config", "zstdmt"] }
bzip2 = { version = "0.4" }
walkdir = "2.4"
libroast = { git = "https://github.com/openSUSE-Rust/roast", version = "1.1.1" }

[lints]
workspace = true
