[package]
name = "obs-service-cargo"
description = "OBS Source Service to vendor and audit all crates.io and dependencies for Rust project locally. Executable rewritten in Rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustsec = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true, features = ["derive"] }
glob.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tempfile = "3.8"
terminfo = "0.8"
toml = "0.7"
libroast.workspace = true
hex-literal = "0.4.1"
hex = "0.4.3"
sha2 = "0.10"

[lints]
workspace = true

[dev-dependencies]
rand = "0.8.5"
reqwest = "0.12.9"
tokio = { version = "1.41.0", features = ["full"] }
tokio-test = "0.4.4"
test-log = { version = "^0.2", features = ["trace"] }

